--- a/Abalone_(Core).ipynb
+++ b/Abalone_(Core).ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Abalone (Core).ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPTVGLKfX7h6aTZfHTxi6PJ",
+      "authorship_tag": "ABX9TyN1nqKihIMUiYBe4tVXY77T",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,19 +34,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "GrHkV1SOl_oK",
-        "outputId": "ad417d08-d7a4-4d47-dd18-a49b34d5a090"
+        "outputId": "a4cbe1af-2146-4691-ca5d-97cefb22f3c4"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')\n"
       ],
-      "execution_count": 70,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Mounted at /content/drive\n"
           ]
         }
       ]
@@ -65,7 +65,7 @@
         "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
         "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score"
       ],
-      "execution_count": 373,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -76,7 +76,7 @@
           "height": 206
         },
         "id": "0I6pUNv9mJp2",
-        "outputId": "dd79c683-2c3e-484e-dcd9-5f3b1de056bb"
+        "outputId": "81d6addf-9b60-4e31-f09c-b7d08b0f9d3e"
       },
       "source": [
         "import pandas as pd\n",
@@ -84,7 +84,7 @@
         "\n",
         "df.head()"
       ],
-      "execution_count": 386,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -185,23 +185,18 @@
               "</div>"
             ],
             "text/plain": [
-              "  Sex  Lenght   Diameter  Height  Whole weight  Shucked weight  \\\n",
-              "0   M    0.455     0.365   0.095        0.5140          0.2245   \n",
-              "1   M    0.350     0.265   0.090        0.2255          0.0995   \n",
-              "2   F    0.530     0.420   0.135        0.6770          0.2565   \n",
-              "3   M    0.440     0.365   0.125        0.5160          0.2155   \n",
-              "4   I    0.330     0.255   0.080        0.2050          0.0895   \n",
+              "  Sex  Lenght   Diameter  ...  Viscera weight  Shell weight  Rings\n",
+              "0   M    0.455     0.365  ...          0.1010         0.150     15\n",
+              "1   M    0.350     0.265  ...          0.0485         0.070      7\n",
+              "2   F    0.530     0.420  ...          0.1415         0.210      9\n",
+              "3   M    0.440     0.365  ...          0.1140         0.155     10\n",
+              "4   I    0.330     0.255  ...          0.0395         0.055      7\n",
               "\n",
-              "   Viscera weight  Shell weight  Rings  \n",
-              "0          0.1010         0.150     15  \n",
-              "1          0.0485         0.070      7  \n",
-              "2          0.1415         0.210      9  \n",
-              "3          0.1140         0.155     10  \n",
-              "4          0.0395         0.055      7  "
+              "[5 rows x 9 columns]"
             ]
           },
           "metadata": {},
-          "execution_count": 386
+          "execution_count": 3
         }
       ]
     },
@@ -212,12 +207,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "oe2niPAWpMa6",
-        "outputId": "0c3b52c5-46d2-46b2-f1ec-c02d9ee438fc"
+        "outputId": "5f87b70a-4986-4e4e-a331-19ea0f00ec47"
       },
       "source": [
         "df.info()"
       ],
-      "execution_count": 387,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -251,14 +246,14 @@
           "height": 206
         },
         "id": "kelk8dtVo1O2",
-        "outputId": "b5980ec7-1887-4f8f-f755-dd5d30455e57"
+        "outputId": "036eb339-c241-495a-989d-a0ab2c1e77ae"
       },
       "source": [
         "# creating a new column for age \"adding 1.5 to rings\"\n",
         "df['Age']= df['Rings'] + 1.5\n",
         "df.head()"
       ],
-      "execution_count": 388,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -365,23 +360,18 @@
               "</div>"
             ],
             "text/plain": [
-              "  Sex  Lenght   Diameter  Height  Whole weight  Shucked weight  \\\n",
-              "0   M    0.455     0.365   0.095        0.5140          0.2245   \n",
-              "1   M    0.350     0.265   0.090        0.2255          0.0995   \n",
-              "2   F    0.530     0.420   0.135        0.6770          0.2565   \n",
-              "3   M    0.440     0.365   0.125        0.5160          0.2155   \n",
-              "4   I    0.330     0.255   0.080        0.2050          0.0895   \n",
+              "  Sex  Lenght   Diameter  Height  ...  Viscera weight  Shell weight  Rings   Age\n",
+              "0   M    0.455     0.365   0.095  ...          0.1010         0.150     15  16.5\n",
+              "1   M    0.350     0.265   0.090  ...          0.0485         0.070      7   8.5\n",
+              "2   F    0.530     0.420   0.135  ...          0.1415         0.210      9  10.5\n",
+              "3   M    0.440     0.365   0.125  ...          0.1140         0.155     10  11.5\n",
+              "4   I    0.330     0.255   0.080  ...          0.0395         0.055      7   8.5\n",
               "\n",
-              "   Viscera weight  Shell weight  Rings   Age  \n",
-              "0          0.1010         0.150     15  16.5  \n",
-              "1          0.0485         0.070      7   8.5  \n",
-              "2          0.1415         0.210      9  10.5  \n",
-              "3          0.1140         0.155     10  11.5  \n",
-              "4          0.0395         0.055      7   8.5  "
+              "[5 rows x 10 columns]"
             ]
           },
           "metadata": {},
-          "execution_count": 388
+          "execution_count": 5
         }
       ]
     },
@@ -393,7 +383,7 @@
           "height": 206
         },
         "id": "VL_bwsVSuL_V",
-        "outputId": "5923959f-80d1-4eb1-e48e-5501ee35f466"
+        "outputId": "e0a88832-4e9b-46a5-8da1-2044ca3d96fb"
       },
       "source": [
         "#1) Transform the categorical variable (sex) by dummy encoding it.\n",
@@ -401,14 +391,14 @@
         "\n",
         "df = pd.merge(\n",
         "    left=df,\n",
-        "    right=dummy_gender,\n",
+        "    right=dummy_sex,\n",
         "    left_index=True,\n",
         "    right_index=True,\n",
         ")\n",
         "df.head()\n",
         "\n"
       ],
-      "execution_count": 389,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -533,23 +523,18 @@
               "</div>"
             ],
             "text/plain": [
-              "  Sex  Lenght   Diameter  Height  Whole weight  Shucked weight  \\\n",
-              "0   M    0.455     0.365   0.095        0.5140          0.2245   \n",
-              "1   M    0.350     0.265   0.090        0.2255          0.0995   \n",
-              "2   F    0.530     0.420   0.135        0.6770          0.2565   \n",
-              "3   M    0.440     0.365   0.125        0.5160          0.2155   \n",
-              "4   I    0.330     0.255   0.080        0.2050          0.0895   \n",
+              "  Sex  Lenght   Diameter  Height  Whole weight  ...  Rings   Age  F  I  M\n",
+              "0   M    0.455     0.365   0.095        0.5140  ...     15  16.5  0  0  1\n",
+              "1   M    0.350     0.265   0.090        0.2255  ...      7   8.5  0  0  1\n",
+              "2   F    0.530     0.420   0.135        0.6770  ...      9  10.5  1  0  0\n",
+              "3   M    0.440     0.365   0.125        0.5160  ...     10  11.5  0  0  1\n",
+              "4   I    0.330     0.255   0.080        0.2050  ...      7   8.5  0  1  0\n",
               "\n",
-              "   Viscera weight  Shell weight  Rings   Age  F  I  M  \n",
-              "0          0.1010         0.150     15  16.5  0  0  1  \n",
-              "1          0.0485         0.070      7   8.5  0  0  1  \n",
-              "2          0.1415         0.210      9  10.5  1  0  0  \n",
-              "3          0.1140         0.155     10  11.5  0  0  1  \n",
-              "4          0.0395         0.055      7   8.5  0  1  0  "
+              "[5 rows x 13 columns]"
             ]
           },
           "metadata": {},
-          "execution_count": 389
+          "execution_count": 7
         }
       ]
     },
@@ -560,7 +545,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "57Cyb7Tl0MsH",
-        "outputId": "5ce9e602-e5ee-4d2b-d3d5-6fe4ed74eb42"
+        "outputId": "b966c5a1-96a2-4079-f2f5-6d788e52dd37"
       },
       "source": [
         "# Import label encoder \n",
@@ -571,25 +556,20 @@
         "df['Sex']= label_encoder.fit_transform(df['Sex']) \n",
         "print(df.head())"
       ],
-      "execution_count": 391,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "   Sex  Lenght   Diameter  Height  Whole weight  Shucked weight  \\\n",
-            "0    2    0.455     0.365   0.095        0.5140          0.2245   \n",
-            "1    2    0.350     0.265   0.090        0.2255          0.0995   \n",
-            "2    0    0.530     0.420   0.135        0.6770          0.2565   \n",
-            "3    2    0.440     0.365   0.125        0.5160          0.2155   \n",
-            "4    1    0.330     0.255   0.080        0.2050          0.0895   \n",
+            "   Sex  Lenght   Diameter  Height  Whole weight  ...  Rings   Age  F  I  M\n",
+            "0    2    0.455     0.365   0.095        0.5140  ...     15  16.5  0  0  1\n",
+            "1    2    0.350     0.265   0.090        0.2255  ...      7   8.5  0  0  1\n",
+            "2    0    0.530     0.420   0.135        0.6770  ...      9  10.5  1  0  0\n",
+            "3    2    0.440     0.365   0.125        0.5160  ...     10  11.5  0  0  1\n",
+            "4    1    0.330     0.255   0.080        0.2050  ...      7   8.5  0  1  0\n",
             "\n",
-            "   Viscera weight  Shell weight  Rings   Age  F  I  M  \n",
-            "0          0.1010         0.150     15  16.5  0  0  1  \n",
-            "1          0.0485         0.070      7   8.5  0  0  1  \n",
-            "2          0.1415         0.210      9  10.5  1  0  0  \n",
-            "3          0.1140         0.155     10  11.5  0  0  1  \n",
-            "4          0.0395         0.055      7   8.5  0  1  0  \n"
+            "[5 rows x 13 columns]\n"
           ]
         }
       ]
@@ -606,7 +586,7 @@
         "#3) Create a train, test, split on the data. Please use random number 42 for consistency.\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42)"
       ],
-      "execution_count": 392,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -616,13 +596,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HXAUFOrNGv6g",
-        "outputId": "9c432e9a-90cd-4ef6-a1de-12411e5dacc8"
+        "outputId": "13a9c1ff-4502-421d-ed20-3bd4013acb95"
       },
       "source": [
         "reg = LinearRegression()\n",
         "reg.fit(X_train,y_train)"
       ],
-      "execution_count": 393,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -632,7 +612,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 393
+          "execution_count": 10
         }
       ]
     },
@@ -654,7 +634,7 @@
         "train_preds = reg.predict(X_train)\n",
         "test_preds = reg.predict(X_test)"
       ],
-      "execution_count": 394,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -673,13 +653,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8ICy5KtH1E-B",
-        "outputId": "f18677ff-eb58-4df4-f5b7-4c7add39d7bc"
+        "outputId": "bb0e9bfe-eace-4944-c5e0-97d6293db165"
       },
       "source": [
         "train_score = reg.score(X_train, y_train)\n",
         "print(train_score)"
       ],
-      "execution_count": 395,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -697,13 +677,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jlPzYWZv1IZW",
-        "outputId": "e7534288-ceb7-4e91-e366-06cce6f370bd"
+        "outputId": "891fae88-bac7-41cb-8075-a34aaf5b025e"
       },
       "source": [
         "test_score = reg.score(X_test, y_test)\n",
         "print(test_score)"
       ],
-      "execution_count": 396,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -722,7 +702,7 @@
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     }
   ]
