--- a/Abalone_(Core).ipynb
+++ b/Abalone_(Core).ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Abalone (Core).ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN+myJFfiByIeAX7IcCgNc+",
+      "authorship_tag": "ABX9TyNWEF4mOXl5HVhqkzJcfoK3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,13 +34,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "GrHkV1SOl_oK",
-        "outputId": "38881929-301f-4d6c-8924-58273bb23833"
+        "outputId": "978fc4b8-2850-4de0-86ff-52a885ac2265"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')\n"
       ],
-      "execution_count": 54,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -67,7 +67,7 @@
         "from sklearn.pipeline import make_pipeline\n",
         "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score"
       ],
-      "execution_count": 55,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -75,10 +75,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 204
+          "height": 203
         },
         "id": "0I6pUNv9mJp2",
-        "outputId": "6d83e5ee-4db6-405f-8a83-ab023a227854"
+        "outputId": "4bb32b27-d446-4139-e691-7be30937e7fc"
       },
       "source": [
         "import pandas as pd\n",
@@ -86,7 +86,7 @@
         "\n",
         "df.head()"
       ],
-      "execution_count": 56,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -198,7 +198,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 56
+          "execution_count": 18
         }
       ]
     },
@@ -209,12 +209,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "oe2niPAWpMa6",
-        "outputId": "d8c4f906-bfe4-4806-8e95-3fa6bd2d1de7"
+        "outputId": "005b7c51-8e7c-4e59-df60-940da710ae85"
       },
       "source": [
         "df.info()"
       ],
-      "execution_count": 57,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -244,15 +244,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "UjdOuw0o1K0W",
-        "outputId": "707cbeb9-a41c-412f-a701-c56d8715489b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "940a38fb-2241-406f-9f04-7fa4cbddd8b9"
       },
       "source": [
         "df.duplicated().sum()"
       ],
-      "execution_count": 58,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -262,7 +262,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 58
+          "execution_count": 20
         }
       ]
     },
@@ -270,16 +270,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "al59FxVU1eHD",
-        "outputId": "2b201ce5-4637-41c1-98d7-83cea1df3fed",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "cac3df40-3477-4598-b746-b5f17f003907"
       },
       "source": [
         "print('unique Sex', df['Sex'].unique())\n",
         "print('\\n')"
       ],
-      "execution_count": 59,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
@@ -302,7 +302,7 @@
         "X = df.drop(columns=['Rings'])\n",
         "y = df['Rings']\n"
       ],
-      "execution_count": 60,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -314,7 +314,7 @@
         "#2) Create a train, test, split on the data. Please use random number 42 for consistency.\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42)"
       ],
-      "execution_count": 61,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -327,7 +327,7 @@
         "cat_sel = make_column_selector(dtype_include='object')\n",
         "num_sel = make_column_selector(dtype_include='number')"
       ],
-      "execution_count": 62,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -339,7 +339,7 @@
         "#3 b) Use column_transformer to match the transformation to the type of column\n",
         "encoder = OneHotEncoder(sparse=False, handle_unknown='ignore')\n"
       ],
-      "execution_count": 63,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -355,17 +355,17 @@
         "\n",
         "col_transformer = make_column_transformer(ohe_tuple,remainder='passthrough')"
       ],
-      "execution_count": 64,
+      "execution_count": 26,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "F6X2006P3OA2",
-        "outputId": "f4b1340b-f544-4891-e4a2-4f69cb4188aa",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "cefac09f-5841-4cbb-95dd-a868eeef0095"
       },
       "source": [
         "#5) Fit your pipeline on the training data\n",
@@ -374,7 +374,7 @@
         "\n",
         "pipe.fit(X_train, y_train)"
       ],
-      "execution_count": 65,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -391,7 +391,7 @@
               "                                                                dtype=<class 'numpy.float64'>,\n",
               "                                                                handle_unknown='ignore',\n",
               "                                                                sparse=False),\n",
-              "                                                  <sklearn.compose._column_transformer.make_column_selector object at 0x7fc22006aa10>)],\n",
+              "                                                  <sklearn.compose._column_transformer.make_column_selector object at 0x7f1a0da638d0>)],\n",
               "                                   verbose=False)),\n",
               "                ('linearregression',\n",
               "                 LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None,\n",
@@ -400,7 +400,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 65
+          "execution_count": 27
         }
       ]
     },
@@ -408,55 +408,25 @@
       "cell_type": "code",
       "metadata": {
         "id": "huRt4zlo3j6u",
-        "outputId": "ce61d026-8073-424e-d3ca-16548b49d20b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "b2c1ce92-e4c2-4e02-e38b-bd58210b80f0"
       },
       "source": [
         "#6) Find the R^2 value of your model for both the training and test sets\n",
         "\n",
-        "# importing mean_absolute_error\n",
-        "from sklearn.metrics import mean_absolute_error\n",
-        "\n",
-        "# Getting the MAE for training set.\n",
-        "training_preds = pipe.predict(X_train)\n",
-        "training_mae = mean_absolute_error(y_train, training_preds)\n",
-        "print(f'MAE of the training set is {training_mae:.2f} rings')"
+        "print(f'Train R2: {r2_score(y_train, pipe.predict(X_train))}')\n",
+        "print(f'Test R2: {r2_score(y_test, pipe.predict(X_test))}')"
       ],
-      "execution_count": 66,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "MAE of the training set is 1.59 rings\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "oVU0Cq6l4BRq",
-        "outputId": "26171592-945b-44d3-ae4b-ad5ed9b4a809",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "source": [
-        "# Getting MAE for testing set.\n",
-        "test_preds = pipe.predict(X_test)\n",
-        "testing_mae = mean_absolute_error(y_test, test_preds)\n",
-        "print(f'MAE of the testing set is {testing_mae:.2f} rings')"
-      ],
-      "execution_count": 67,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "MAE of the testing set is 1.57 rings\n"
+            "Train R2: 0.5344208330176741\n",
+            "Test R2: 0.5457612372619376\n"
           ]
         }
       ]
@@ -478,7 +448,7 @@
       "source": [
         ""
       ],
-      "execution_count": 67,
+      "execution_count": 28,
       "outputs": []
     }
   ]
