--- a/Abalone_(Core).ipynb
+++ b/Abalone_(Core).ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Abalone (Core).ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNWEF4mOXl5HVhqkzJcfoK3",
+      "authorship_tag": "ABX9TyOFlKxuJ0k0sJALOajPgE4J",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,19 +34,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "GrHkV1SOl_oK",
-        "outputId": "978fc4b8-2850-4de0-86ff-52a885ac2265"
+        "outputId": "7832bf97-d106-4d12-db3d-cece8ec7b89b"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')\n"
       ],
-      "execution_count": 16,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Mounted at /content/drive\n"
           ]
         }
       ]
@@ -67,7 +67,7 @@
         "from sklearn.pipeline import make_pipeline\n",
         "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score"
       ],
-      "execution_count": 17,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -75,10 +75,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 203
+          "height": 206
         },
         "id": "0I6pUNv9mJp2",
-        "outputId": "4bb32b27-d446-4139-e691-7be30937e7fc"
+        "outputId": "ca48c534-b701-429b-93f1-b82dda91e041"
       },
       "source": [
         "import pandas as pd\n",
@@ -86,13 +86,16 @@
         "\n",
         "df.head()"
       ],
-      "execution_count": 18,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/html": [
-              "<div>\n",
+              "\n",
+              "  <div id=\"df-44691017-01d9-4938-9b0c-45be96146df3\">\n",
+              "    <div class=\"colab-df-container\">\n",
+              "      <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
               "        vertical-align: middle;\n",
@@ -184,21 +187,102 @@
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
-              "</div>"
+              "</div>\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-44691017-01d9-4938-9b0c-45be96146df3')\"\n",
+              "              title=\"Convert this dataframe to an interactive table.\"\n",
+              "              style=\"display:none;\">\n",
+              "        \n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
+              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
+              "  </svg>\n",
+              "      </button>\n",
+              "      \n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      flex-wrap:wrap;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "      <script>\n",
+              "        const buttonEl =\n",
+              "          document.querySelector('#df-44691017-01d9-4938-9b0c-45be96146df3 button.colab-df-convert');\n",
+              "        buttonEl.style.display =\n",
+              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "        async function convertToInteractive(key) {\n",
+              "          const element = document.querySelector('#df-44691017-01d9-4938-9b0c-45be96146df3');\n",
+              "          const dataTable =\n",
+              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                     [key], {});\n",
+              "          if (!dataTable) return;\n",
+              "\n",
+              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "            + ' to learn more about interactive tables.';\n",
+              "          element.innerHTML = '';\n",
+              "          dataTable['output_type'] = 'display_data';\n",
+              "          await google.colab.output.renderOutput(dataTable, element);\n",
+              "          const docLink = document.createElement('div');\n",
+              "          docLink.innerHTML = docLinkHtml;\n",
+              "          element.appendChild(docLink);\n",
+              "        }\n",
+              "      </script>\n",
+              "    </div>\n",
+              "  </div>\n",
+              "  "
             ],
             "text/plain": [
-              "  Sex  Lenght   Diameter  ...  Viscera weight  Shell weight  Rings\n",
-              "0   M    0.455     0.365  ...          0.1010         0.150     15\n",
-              "1   M    0.350     0.265  ...          0.0485         0.070      7\n",
-              "2   F    0.530     0.420  ...          0.1415         0.210      9\n",
-              "3   M    0.440     0.365  ...          0.1140         0.155     10\n",
-              "4   I    0.330     0.255  ...          0.0395         0.055      7\n",
+              "  Sex  Lenght   Diameter  Height  Whole weight  Shucked weight  \\\n",
+              "0   M    0.455     0.365   0.095        0.5140          0.2245   \n",
+              "1   M    0.350     0.265   0.090        0.2255          0.0995   \n",
+              "2   F    0.530     0.420   0.135        0.6770          0.2565   \n",
+              "3   M    0.440     0.365   0.125        0.5160          0.2155   \n",
+              "4   I    0.330     0.255   0.080        0.2050          0.0895   \n",
               "\n",
-              "[5 rows x 9 columns]"
+              "   Viscera weight  Shell weight  Rings  \n",
+              "0          0.1010         0.150     15  \n",
+              "1          0.0485         0.070      7  \n",
+              "2          0.1415         0.210      9  \n",
+              "3          0.1140         0.155     10  \n",
+              "4          0.0395         0.055      7  "
             ]
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 5
         }
       ]
     },
@@ -209,12 +293,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "oe2niPAWpMa6",
-        "outputId": "005b7c51-8e7c-4e59-df60-940da710ae85"
+        "outputId": "2509e1e7-faf0-466c-dd5a-6cdd53408d79"
       },
       "source": [
         "df.info()"
       ],
-      "execution_count": 19,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -247,12 +331,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "940a38fb-2241-406f-9f04-7fa4cbddd8b9"
+        "outputId": "6ec5bbb3-07a2-4f1e-f8ed-3bfe3b026711"
       },
       "source": [
         "df.duplicated().sum()"
       ],
-      "execution_count": 20,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -262,7 +346,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 7
         }
       ]
     },
@@ -273,13 +357,13 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "cac3df40-3477-4598-b746-b5f17f003907"
+        "outputId": "fbb7dbba-2b2c-4f0a-db09-83d763e356d7"
       },
       "source": [
         "print('unique Sex', df['Sex'].unique())\n",
         "print('\\n')"
       ],
-      "execution_count": 21,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -302,7 +386,7 @@
         "X = df.drop(columns=['Rings'])\n",
         "y = df['Rings']\n"
       ],
-      "execution_count": 22,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -314,7 +398,7 @@
         "#2) Create a train, test, split on the data. Please use random number 42 for consistency.\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42)"
       ],
-      "execution_count": 23,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -327,7 +411,7 @@
         "cat_sel = make_column_selector(dtype_include='object')\n",
         "num_sel = make_column_selector(dtype_include='number')"
       ],
-      "execution_count": 24,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -337,9 +421,10 @@
       },
       "source": [
         "#3 b) Use column_transformer to match the transformation to the type of column\n",
-        "encoder = OneHotEncoder(sparse=False, handle_unknown='ignore')\n"
+        "encoder = OneHotEncoder(sparse=False, handle_unknown='ignore')\n",
+        "scaler = StandardScaler()\n"
       ],
-      "execution_count": 25,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -351,11 +436,11 @@
         "# 4) Instantiate make_pipeline()\n",
         "\n",
         "ohe_tuple = (encoder, cat_sel)\n",
+        "num_tuple = (scaler,num_sel)\n",
         "\n",
-        "\n",
-        "col_transformer = make_column_transformer(ohe_tuple,remainder='passthrough')"
+        "col_transformer = make_column_transformer(ohe_tuple,num_tuple,remainder='passthrough')"
       ],
-      "execution_count": 26,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -365,7 +450,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "cefac09f-5841-4cbb-95dd-a868eeef0095"
+        "outputId": "0057da24-4300-4de4-963e-8d7aedb1426e"
       },
       "source": [
         "#5) Fit your pipeline on the training data\n",
@@ -374,33 +459,26 @@
         "\n",
         "pipe.fit(X_train, y_train)"
       ],
-      "execution_count": 27,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "Pipeline(memory=None,\n",
-              "         steps=[('columntransformer',\n",
-              "                 ColumnTransformer(n_jobs=None, remainder='passthrough',\n",
-              "                                   sparse_threshold=0.3,\n",
-              "                                   transformer_weights=None,\n",
+              "Pipeline(steps=[('columntransformer',\n",
+              "                 ColumnTransformer(remainder='passthrough',\n",
               "                                   transformers=[('onehotencoder',\n",
-              "                                                  OneHotEncoder(categories='auto',\n",
-              "                                                                drop=None,\n",
-              "                                                                dtype=<class 'numpy.float64'>,\n",
-              "                                                                handle_unknown='ignore',\n",
+              "                                                  OneHotEncoder(handle_unknown='ignore',\n",
               "                                                                sparse=False),\n",
-              "                                                  <sklearn.compose._column_transformer.make_column_selector object at 0x7f1a0da638d0>)],\n",
-              "                                   verbose=False)),\n",
-              "                ('linearregression',\n",
-              "                 LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None,\n",
-              "                                  normalize=False))],\n",
-              "         verbose=False)"
+              "                                                  <sklearn.compose._column_transformer.make_column_selector object at 0x7f5fd1d12c90>),\n",
+              "                                                 ('standardscaler',\n",
+              "                                                  StandardScaler(),\n",
+              "                                                  <sklearn.compose._column_transformer.make_column_selector object at 0x7f5fd1d12a10>)])),\n",
+              "                ('linearregression', LinearRegression())])"
             ]
           },
           "metadata": {},
-          "execution_count": 27
+          "execution_count": 21
         }
       ]
     },
@@ -411,7 +489,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b2c1ce92-e4c2-4e02-e38b-bd58210b80f0"
+        "outputId": "c6884fd3-22a7-4aba-c0d5-07d0ec8b1431"
       },
       "source": [
         "#6) Find the R^2 value of your model for both the training and test sets\n",
@@ -419,14 +497,14 @@
         "print(f'Train R2: {r2_score(y_train, pipe.predict(X_train))}')\n",
         "print(f'Test R2: {r2_score(y_test, pipe.predict(X_test))}')"
       ],
-      "execution_count": 28,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Train R2: 0.5344208330176741\n",
-            "Test R2: 0.5457612372619376\n"
+            "Train R2: 0.5344076741899404\n",
+            "Test R2: 0.5457929302665214\n"
           ]
         }
       ]
@@ -448,7 +526,7 @@
       "source": [
         ""
       ],
-      "execution_count": 28,
+      "execution_count": 15,
       "outputs": []
     }
   ]
